# snds_631_finalproject_DSilva

./: .gitignore  README.md  README.rst  pyproject.toml
cryomap_align/: gauss_opt_utils.py  gauss_proc_utils.py  manopt_utils.py  opt_refinement.py  utils.py  vol_utils.py  wavelet_utils.py
cryomap_align/commands/: run_align.py
examples/: config.ini  learning_config.ipynb  testing_method.ipynb
examples/here/: optimized_rotations.npz
examples/num_exp1/test1/: optimized_rotations.npz
examples/num_exp1/test2/: optimized_rotations.npz
report_results/: config.ini  report_figures.ipynb  report_figures_noise.py  report_figures_noref.py  report_figures_ref.py  run_report_fig_noise.job  run_report_fig_noref.job  run_report_fig_ref.job
